[gd_scene load_steps=6 format=3 uid="uid://bawliiem6bw0u"]

[ext_resource type="Script" path="res://Scripts/UI/battle_ui.gd" id="1_0rgae"]
[ext_resource type="Shortcut" uid="uid://fuvss5hfg4q2" path="res://Resources/Shortcuts/go_back.tres" id="2_hku4e"]
[ext_resource type="Texture2D" uid="uid://bcf50aa63e5x7" path="res://Art/units/elf/elf_archer.png" id="3_tidxc"]
[ext_resource type="Texture2D" uid="uid://i280h28mqf1x" path="res://Art/units/neutral/wood_dryad.png" id="4_k6rxg"]
[ext_resource type="PackedScene" uid="uid://c2tjldwjynnry" path="res://Scenes/UI/GameChat.tscn" id="5_10swj"]

[node name="BattleUI" type="CanvasLayer"]
script = ExtResource("1_0rgae")

[node name="SwitchCamera" type="Button" parent="."]
offset_left = 289.0
offset_top = 25.0
offset_right = 526.0
offset_bottom = 88.0
scale = Vector2(2.04, 2.04)
text = "Show World"

[node name="Menu" type="Button" parent="."]
offset_left = 20.0
offset_top = 30.0
offset_right = 138.0
offset_bottom = 93.0
scale = Vector2(2.04, 2.04)
shortcut = ExtResource("2_hku4e")
text = "Menu"

[node name="Players" type="VBoxContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -274.0
offset_top = 18.0
offset_right = -16.0
offset_bottom = 498.0
grow_horizontal = 0

[node name="Label" type="Label" parent="Players"]
layout_mode = 2
text = "Players:"
horizontal_alignment = 2

[node name="Button" type="Button" parent="Players"]
layout_mode = 2
text = "Player1"

[node name="Button2" type="Button" parent="Players"]
layout_mode = 2
text = "Player2"

[node name="Units" type="HBoxContainer" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 14.0
offset_top = -188.0
offset_right = 6294.0
offset_bottom = 371.0
grow_vertical = 0
scale = Vector2(0.3, 0.3)

[node name="TextureButton" type="TextureButton" parent="Units"]
layout_mode = 2
texture_normal = ExtResource("3_tidxc")

[node name="TextureButton2" type="TextureButton" parent="Units"]
layout_mode = 2
texture_normal = ExtResource("4_k6rxg")

[node name="GameChat" parent="." instance=ExtResource("5_10swj")]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -750.0
offset_top = -400.0
offset_right = 0.0
grow_horizontal = 0
grow_vertical = 0

[node name="SummaryContainer" type="MarginContainer" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TurnsBG" type="ColorRect" parent="."]
offset_left = 803.0
offset_top = 34.0
offset_right = 1283.0
offset_bottom = 150.0
color = Color(0, 0, 0, 0.423529)

[node name="TurnCount" type="Label" parent="TurnsBG"]
layout_mode = 0
offset_left = 4.0
offset_top = 5.0
offset_right = 493.0
offset_bottom = 55.0
text = "Turn 1 (last turn is 30)"

[node name="ClockLeft" type="Label" parent="TurnsBG"]
layout_mode = 0
offset_left = 6.0
offset_top = 64.0
offset_right = 495.0
offset_bottom = 114.0
text = "3 : 00 : 000"

[node name="ReplayControls" type="ColorRect" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -480.0
offset_top = -272.0
offset_right = 480.0
offset_bottom = -72.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0, 0, 0, 0.423529)

[node name="MoveCount" type="Label" parent="ReplayControls"]
layout_mode = 1
offset_right = 489.0
offset_bottom = 50.0
text = "21/37"

[node name="Status" type="Label" parent="ReplayControls"]
layout_mode = 1
offset_top = 53.0
offset_right = 489.0
offset_bottom = 103.0
text = "Replay status: Lorem Ipsum"

[node name="CycloneTimer" type="ColorRect" parent="."]
offset_left = 1308.0
offset_top = 34.0
offset_right = 1593.0
offset_bottom = 150.0
color = Color(0, 0, 0, 0.423529)

[node name="FluffText" type="Label" parent="CycloneTimer"]
layout_mode = 0
offset_left = 4.0
offset_top = 5.0
offset_right = 493.0
offset_bottom = 55.0
text = "Cyclone Target"

[node name="CycloneTarget" type="Label" parent="CycloneTimer"]
layout_mode = 0
offset_left = 6.0
offset_top = 64.0
offset_right = 495.0
offset_bottom = 114.0
text = "Player1 5 turns"

[node name="SpellBook" type="VBoxContainer" parent="."]
offset_left = 22.0
offset_top = 282.0
offset_right = 178.0
offset_bottom = 800.0

[node name="Spell" type="Button" parent="SpellBook"]
layout_mode = 2
text = "Spell"

[connection signal="pressed" from="SwitchCamera" to="." method="_on_switch_camera_pressed"]
[connection signal="pressed" from="Menu" to="." method="_on_menu_pressed"]
